# coding_lenguage

1/: main.cpp
3/: main.cpp
classwork1/: main.cpp
lab2/: main.cpp  point.txt
list/: main.cpp
my_game/: CMakeLists.txt  main.cpp
